tests/snapshots/integration__integration_tests__approval_ui__already_approved_skip_prompt.snap
---
source: tests/integration_tests/approval_ui.rs
info:
  program: wt
  args:
    - switch
    - "--create"
    - test-approved
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mRunning post-create:[0m
[107m [0m  [1m[34mecho[0m [32m'approved'[0m [36m>[0m output.txt[0m
✅ [32mCreated new worktree for [1m[32mtest-approved[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO].test-approved[0m[0m
💡 [2m[2mTo enable automatic cd, run: wt config shell install[0m[0m

----- stderr -----
[0m
