tests/snapshots/integration__integration_tests__approval_ui__decline_approval_skips_only_unapproved.snap
---
source: tests/integration_tests/approval_ui.rs
expression: combined
---
exit_code: 0
----- stdout -----
⚪ [2mPost-create declined[0m
✅ [32mCreated new worktree for [1m[32mtest-decline[0m[32m from [1m[32mmain[0m[32m at [1m[32m[REPO].test-decline[0m[0m
💡 
💡 [2mTo enable automatic cd, run: wt config shell[0m

----- stderr -----

🟡 [33m[1m[33mtest-repo[0m[33m wants to execute [1m[33m2[0m[33m commands:[0m

🔄 Post-create:
[40m [0m  [1m[34mecho[0m [32m'First command'[0m[0m

🔄 Post-create:
[40m [0m  [1m[34mecho[0m [32m'Third command'[0m[0m

💡 Allow and remember? [1m[y/N][0m
